Update language and fix alignment in Header component

--- a/client/src/components/Novedades/Novedades.css
+++ b/client/src/components/Novedades/Novedades.css
@@ -10,6 +10,7 @@
 .novedades-text {
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   width: 100%;
   font-size: 15px;
   color: var(--text-color);
@@ -31,6 +32,13 @@
 
 .todos-productos{
   width: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+.todos-productos button{ 
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 
